# samssh

./: .gitignore  AGENTS.md  Cargo.toml  rust-toolchain.toml
.spec/: AGENTS.md
.spec/decisions/: D001.md  D002.md  D003.md  D004.md  D005.md  D006.md  D007.md  D008.md  D009.md  D010.md  D011.md
.spec/designs/: app_state.puml  architecture.puml  module_deps.md
.spec/evidence/: E001.md  E002.md  E003.md  E004.md  E005.md  E006.md  E007.md
.spec/requirements/: R001.md  R002.md  R003.md  R004.md  R005.md  R006.md  R007.md  R008.md  R009.md  R010.md
.spec/skills/: spec-bootstrap.md  spec-confirm.md  spec-design.md  spec-discovery.md  spec-grill.md  spec-implement.md  spec-plan.md  spec-release.md  spec-requirement.md  spec-review.md  spec-sync.md  spec-test.md  spec-trace.md
.spec/standards/: architecture.md  security-patterns.md  technology-stack.md  ui-component-conventions.md
.spec/templates/: adr-template.md  api-swagger-template.yaml  business-rule-template.md  decision-record-template.md  design-template.md  domain-model-template.puml  evidence-template.md  plan-template.md  requirement-template-lite.md  requirement-template.md  test-case-template.md  use-case-template.md
.spec/traceability/: design-to-requirement.md  lifecycle-gates.md  requirements_matrix.md
docs/: 需求功能文档.md
src/: lib.rs  main.rs  session.rs
src/app/: mod.rs  state.rs
src/config/: mod.rs  profile.rs  settings.rs  store.rs
src/crypto/: dpapi.rs  mod.rs
src/logger/: mod.rs
src/sftp/: client.rs  mod.rs  transfer.rs
src/ssh/: auth.rs  client.rs  known_hosts.rs  mod.rs
(+18 files in other folders)
