[package]
name = "samssh"
version = "0.1.0"
edition = "2021"
description = "A modern SSH client for Windows with gpui GUI"
authors = ["Sam"]

[lib]
name = "samssh"
path = "src/lib.rs"

[[bin]]
name = "samssh"
path = "src/main.rs"

[dependencies]
# GUI framework
gpui = { git = "https://github.com/zed-industries/zed.git", package = "gpui" }

# SSH protocol
russh = "0.45"
russh-sftp = "0.2"
async-trait = "0.1"

# Terminal emulation
wezterm-term = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Windows API
windows-sys = { version = "0.59", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

# Clipboard
arboard = "3"

# File dialogs
rfd = "0.15"

# System tray
tray-icon = "0.19"

# Async
futures = "0.3"

[dev-dependencies]
tempfile = "3"
